--- a/views/add-user.hbs
+++ b/views/add-user.hbs
@@ -1,5 +1,5 @@
-<nav ar ia-label="breadcrumb">
-  <ol class="breadcrumb">
+<nav ar ia-label="breadcrumb ">
+  <ol class="breadcrumb nav justify-content-center">
     <li class="breadcrumb-item"><a href="/"><i><strong> Home </strong></i></a></li>
     <li class="breadcrumb-item active" aria-current="page"><i> NEW USER </i></li>
   </ol>
