--- a/views/view-user.hbs
+++ b/views/view-user.hbs
@@ -4,19 +4,18 @@
     <li class="breadcrumb-item active" aria-current="page"><strong><i> VIEW USER </i></strong></li>
   </ol>
   </nav> 
-  <div class="view-user p-5">
+  <div class="view-user p-8 ">
     {{#each table}}
-     <div class="row mb-5">
+     <div class="row mb-5 text-center">
         <div class="clo text-center">
          <h3><i><strong> {{this.first_name}} {{this.last_name}}</strong></i></h3>
         </div>
      </div>
-    
-  
-  <table class=" table table-bordered table table-striped">
-  <thead class="thead-dark table-dark">
+
+  <table class=" table table-bordered table table-striped  ">
+  <thead class="thead-dark table-dark ">
     <tr>
-      <th scope="col"><i> First Name </i></th>
+      <th scope="col "><i> First Name </i></th>
       <th scope="col"><i> Last Name </i></th>
       <th scope="col"><i> Email </i></th>
       <th scope="col"><i> Phone </i></th>
