--- a/views/edit-user.hbs
+++ b/views/edit-user.hbs
@@ -5,7 +5,7 @@
   </ol>
   </nav> 
    {{#if alert}}
-<div class="col-8 alert alert-info d-flmissaiex align-items-center disble fade show " role="alert">
+<div class="col-8 alert alert-info alert-dismissible fade show " role="alert">
     {{alert}}
   <button type="button" class="btn-close float-right " data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
