--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-6"><h1> <strong><i>Users </i></strong></h1></div>
    <div class=" col-6 d-flex justify-content-end ">
-  <a href="/adduser" type="button" class="btn btn-primary align-self-center">+ add user</a>
+  <a href="/adduser" type="button" class="btn btn-primary align-self-center"><i><strong> + Add User </i> <strong></strong></a>
   </div>
 </div>
 
