--- a/views/add-user.hbs
+++ b/views/add-user.hbs
@@ -1,11 +1,12 @@
 <nav ar ia-label="breadcrumb ">
-  <ol class="breadcrumb nav justify-content-center">
+  <ol class="breadcrumb  justify-content-center">
     <li class="breadcrumb-item"><a href="/"><i><strong> Home </strong></i></a></li>
-    <li class="breadcrumb-item active" aria-current="page"><i> NEW USER </i></li>
+    <li class="breadcrumb-item active" aria-current="page"><i><strong> NEW USER </strong></i></li>
   </ol>
   </nav>
+  <br>
    {{#if alert}}
-<div class="col-8 alert alert-info alert-dismissible fade show " role="alert">
+<div class="col-12 alert alert-info alert-dismissible fade show " role="alert">
     {{alert}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
