--- a/views/edit-user.hbs
+++ b/views/edit-user.hbs
@@ -1,11 +1,12 @@
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb justify-content-center">
     <li class="breadcrumb-item"><a href="/"><i><strong> Home </strong></i></a></li>
     <li class="breadcrumb-item active" aria-current="page"><i><strong> EDIT USER </strong></i></li>
   </ol>
   </nav> 
+  <br>
    {{#if alert}}
-<div class="col-8 alert alert-info alert-dismissible fade show " role="alert">
+<div class="col-12 alert alert-primary alert-dismissible fade show " role="alert">
     {{alert}}
   <button type="button" class="btn-close float-right " data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
